--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -4,9 +4,9 @@
     grid-template-rows: repeat(2, max-content);
     row-gap: 4rem;
 
-    background-color: rgba($color: white, $alpha: .8);
+    background-color: #fff;
     opacity: .8;
-    min-height: 60rem;
+    min-height: 60rem;  
     width: 100rem;
     margin: 9.5rem auto;
     padding: 3rem 5rem;
@@ -20,7 +20,7 @@
     margin: 0 auto;
     transition: width 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
-    &__input {
+    &__input {  
         border: none;
         padding: 1.2rem 2rem;
         color: var(--color-grey-dark-1);
@@ -29,6 +29,7 @@
         grid-column: 1;
         transition: width 200ms;
         justify-self: center;
+        background-color: var(--color-grey-light-3);  
         
         &:focus {
             outline: none;
@@ -42,7 +43,7 @@
     &__button {
         border: none;
         outline: none;
-        background-color: #fff;
+        background-color: var(--color-grey-light-3);  
         padding: .3rem .5rem;
         justify-self: center;
     }
