--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -10,6 +10,10 @@
         text-align: center;
     }
 
+    &__image {
+        box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+    }
+
     &__story {
         padding: 0 1.2rem;
         display: flex;
